nobase_include_HEADERS = gicht.h gicht_version.h
nobase_include_HEADERS+= gicht/chash.h
nobase_include_HEADERS+= gicht/context.h
nobase_include_HEADERS+= gicht/dbuf.h
nobase_include_HEADERS+= gicht/dllist.h
nobase_include_HEADERS+= gicht/lbuf.h
nobase_include_HEADERS+= gicht/module.h

$(include_HEADERS):
